--- a/index.html
+++ b/index.html
@@ -43,11 +43,11 @@
         </p>
       </div>
     </div>
-    <div class="attribution">
+    <footer class="attribution">
       Challenge by
       <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
         >Frontend Mentor</a
       >. Coded by <a href="#">Svetlana Jokic</a>.
-    </div>
+    </footer>
   </body>
 </html>
