--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     </style>
   </head>
   <body>
-    <div class="wrapper">
+    <main class="container">
       <div class="shape">
         <div class="pic">
           <img
@@ -42,7 +42,7 @@
           to the next level
         </p>
       </div>
-    </div>
+    </main>
     <footer class="attribution">
       Challenge by
       <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
